# ros_projs

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cpp_parameters/lib/cpp_parameters/: minimal_param_node
ros2_ws/install/cpp_parameters/share/cpp_parameters/: local_setup.sh  package.sh
ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh
ros2_ws/install/cpp_srvccli/lib/cpp_srvccli/: client  server
ros2_ws/install/cpp_srvccli/share/cpp_srvccli/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/polygon_base/share/polygon_base/: package.sh
ros2_ws/install/polygon_plugins/share/polygon_plugins/: package.sh
ros2_ws/launch/: turtlesim_mimic_launch.py
ros2_ws/log/: latest_build
ros2_ws/src/cpp_parameters/: package.xml
ros2_ws/src/cpp_parameters/src/: cpp_parameters_node.cpp
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_ws/src/cpp_srvccli/: CMakeLists.txt
ros2_ws/src/cpp_srvccli/src/: add_two_ints_server.cpp
ros2_ws/src/polygon_base/: CMakeLists.txt  package.xml
ros2_ws/src/polygon_plugins/: CMakeLists.txt
ros2_ws/src/polygon_plugins/src/: polygon_plugins.cpp
ros2_ws/src/py_pubsub/: setup.py
ros2_ws/src/turtle_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/turtle_pubsub/src/: turtle_publisher.cpp
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt
(+14 files in other folders)
